fix z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -34,6 +34,8 @@ button {
 }
 
 menu {
+  position: relative;
+  z-index: 100;
   text-align: center;
   margin-top: 20px;
 
